--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@ layout: home
 search_exclude: true
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+![](https://{{site.baseurl}}/images/japanese-cherry-trees.jpg "Sakura")
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar...
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
-
-# Posts
+# Notlar
