--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 ---
 
-![](https://{{site.baseurl}}/images/japanese-cherry-trees.jpg "Sakura")
+![]({{site.baseurl}}/images/japanese-cherry-trees.jpg "Sakura")
 
 Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar...
 
