deploy: e1a78816c0603913c22b27f4af48053356c216bf

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https:///blog/images/japanese-cherry-trees.jpg" alt="" title="Sakura" /></p>
+        <div class="home"><p><img src="/blog/images/japanese-cherry-trees.jpg" alt="" title="Sakura" /></p>
 
 <p>Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar…</p>
 
