--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://risalenotlari.github.io/blog/404.html" />
 <meta property="og:site_name" content="Risale Notları" />
 <script type="application/ld+json">
-{"description":"Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar…","@type":"WebPage","headline":"Risale Notları","url":"https://risalenotlari.github.io/blog/404.html","@context":"https://schema.org"}</script>
+{"description":"Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar…","headline":"Risale Notları","@type":"WebPage","url":"https://risalenotlari.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://risalenotlari.github.io/blog/feed.xml" title="Risale Notları" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -32,7 +32,7 @@
 <meta property="og:url" content="https://risalenotlari.github.io/blog/404.html" />
 <meta property="og:site_name" content="Risale Notları" />
 <script type="application/ld+json">
-{"description":"Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar…","@type":"WebPage","headline":"Risale Notları","url":"https://risalenotlari.github.io/blog/404.html","@context":"https://schema.org"}</script>
+{"description":"Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar…","headline":"Risale Notları","@type":"WebPage","url":"https://risalenotlari.github.io/blog/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
