--- a/404.html
+++ b/404.html
@@ -85,7 +85,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/blog/about/">Site Hakkında</a><a class="page-link" href="/blog/search/">Search</a><a class="page-link" href="/blog/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/about/">Site Hakkında</a><a class="page-link" href="/blog/search/">Arama</a><a class="page-link" href="/blog/categories/">Etiketler</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
