deploy: 4ec49bd07050d0f8cd770dda2a828d88b507a98b

--- a/search/index.html
+++ b/search/index.html
@@ -114,7 +114,7 @@ window.onload = wrap_img;
 
 <div class="search">
     <div class="search-input-wrap">
-    <input type="text" class="js-search-input search-input input-block form-control" tabindex="0" placeholder="Search Risale Notları" aria-label="Search Risale Notları" autocomplete="off">
+    <input type="text" class="js-search-input search-input input-block form-control" tabindex="0" placeholder="Risale Notları Sitesini Ara" aria-label="Risale Notları Sitesini Ara" autocomplete="off">
     </div>
     <br>
     <div class="js-search-results search-results-wrap"></div>
